--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -1,5 +1,7 @@
 {
     "A new verification link has been sent to the email address you provided during registration.": "新的驗證連結已發送到您註冊時提供的電子郵件地址。",
+    "Administrator": "系統管理員",
+    "All rights reserved.": "版權所有。",
     "Already have an account?": "已有帳戶？",
     "Back to log in": "返回登入",
     "Confirm": "確認",
@@ -12,8 +14,11 @@
     "Email": "電子郵件",
     "Forgot your password?": "忘記密碼？",
     "Forgot Your Password?": "忘記密碼？",
+    "Hello!": "您好！",
     "Hi, :user_name": ":user_name 您好",
+    "If you did not request a password reset, no further action is required.": "如果您未要求重設密碼，請忽略此郵件。",
     "If you didn't receive the email, we will gladly send you another.": "如果您沒有收到那封電子郵件，我們將很樂意再發送一封給您。",
+    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "如果您點擊「:actionText」按鈕時出現問題，請複製下方連結至瀏覽器中貼上：",
     "Log Out": "登出",
     "Login here": "在此登入",
     "Lost password?": "遺失密碼？",
@@ -25,16 +30,21 @@
     "Not registered?": "尚未註冊？",
     "Password": "密碼",
     "Recover password": "還原密碼",
+    "Regards": "致敬",
     "Register": "註冊",
     "Remember me": "記住我",
     "Resend Verification Email": "重新發送驗證電子郵件",
     "Reset password": "重設密碼",
+    "Reset Password": "重設密碼",
+    "Reset Password Notification": "重設密碼通知",
     "Sign in": "登入",
     "Submit": "送出",
     "Thanks for signing up! Before getting started, ": "感謝您的註冊！在開始之前， ",
     "This is a secure area of the application. Please confirm your password before continuing.": "請在繼續之前確認您的密碼。",
+    "This password reset link will expire in :count minutes.": "重設密碼連結將會在 :count 分鐘後失效。",
     "Welcome back": "歡迎回來",
     "You are logged in!": "您已登入！",
+    "You are receiving this email because we received a password reset request for your account.": "您收到此電子郵件是因為我們收到了重設密碼的要求。",
     "Your Email": "您的電子郵件地址",
     "Your Name": "您的姓名",
     "Your Password": "您的密碼"
