feat:更新最新資料

--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -2,13 +2,13 @@
     "A new verification link has been sent to the email address you provided during registration.": "新的驗證連結已發送到您註冊時提供的電子郵件地址。",
     "Administrator": "系統管理員",
     "All rights reserved.": "版權所有。",
-    "Already have an account?": "已有帳戶？",
+    "Already have an account?": "已有帳號？",
     "Back to log in": "返回登入",
     "Confirm": "確認",
     "Confirm Password": "確認密碼",
     "could you verify your email address by clicking on the link we just emailed to you?": "您可以點擊我們剛剛給您發送的連結來驗證您的電子郵件地址？",
-    "Create account": "建立帳戶",
-    "Create Account": "建立帳戶",
+    "Create account": "建立帳號",
+    "Create Account": "建立帳號",
     "Dashboard": "控制面板",
     "Don't fret! Just type in your email and we will send you a code to reset your password!": "別擔心！只需輸入您的電子郵件，我們就會向您發送一個代碼來重設您的密碼！",
     "Email": "電子郵件",
